Updated Services with Sorting